--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,9 +19,9 @@
     display: none;
     flex-direction: column;
     justify-content: top;
-    padding-top: 5rem;
+    padding-top: 3rem;
     align-items: center;
-    position: fixed;
+    position: sticky;
     inset: 0;
     width: 100%;
     height: 100%;
@@ -34,7 +34,7 @@
 
   .app .nav__hamburger {
     display: flex;
-    z-index: 2;
+    z-index: 3;
     margin-left: 0.8em;
   }
 }
